--- a/ikonWebChat.html
+++ b/ikonWebChat.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>Let’s start chatting...</h1>
-  <br />
-  Click the button to start a chat.
-  <br />
+	<h1>Chat Now</h1>
+  
   <!--Embedded Service Snippet-->
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
