--- a/ikonWebChat.html
+++ b/ikonWebChat.html
@@ -28,6 +28,10 @@
         border-style: unset !important;
         color: white !important;
     }
+	  
+	  .helpButton {
+	  	margin-right: 30em !important;
+	  }
       
       html, body {
 		height: 100%;
@@ -36,7 +40,7 @@
 
 		#section1 {
 			height: 90%; 
-		text-align:center; 
+			margin-left: 23em !important;
 			display:table;
 			width:100%;
 		}
