--- a/ikonWebChat.html
+++ b/ikonWebChat.html
@@ -32,6 +32,9 @@
 	  .helpButton {
 	  	margin-right: 30em !important;
 	  }
+	  .embeddedServiceSidebar.layout-docked .dockableContainer.showDockableContainer {
+	  	margin-right: 25em !important;
+	  }
       
       html, body {
 		height: 100%;
