--- a/ikonWebChat.html
+++ b/ikonWebChat.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	</head>
 <body>
 	<div class="section" id="section1">
 	<h1>Chat Now</h1>
