--- a/ikonWebChat.html
+++ b/ikonWebChat.html
@@ -33,10 +33,10 @@
     }
 	  
 	  .helpButton {
-	  	margin-right: 30em !important;
+	  	left: 50% !important;
 	  }
 	  .embeddedServiceSidebar.layout-docked .dockableContainer.showDockableContainer {
-	  	margin-right: 25em !important;
+	  	left: 50% !important;
 	  }
       
       html, body {
@@ -46,7 +46,8 @@
 
 		#section1 {
 			height: 90%; 
-			margin-left: 23em !important;
+			position:fixed;
+			left:30%;
 			display:table;
 			width:100%;
 		}
