--- a/ikonWebChat.html
+++ b/ikonWebChat.html
@@ -104,17 +104,17 @@
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.init(
-			'https://proteustechnologies--cwerxdev.my.salesforce.com',
-			'https://cwerxdev-proteustechnologies.cs112.force.com/unsubscribe',
+			'https://proteustechnologies--cwerxuat.my.salesforce.com',
+			'https://cwerxuat-proteustechnologies.cs111.force.com/unsubscribe',
 			gslbBaseURL,
-			'00D0T0000000UWJ',
+			'00D1e0000000XDl',
 			'Sales_Chat_Agents',
 			{
 				baseLiveAgentContentURL: 'https://c.la2-c1cs-hnd.salesforceliveagent.com/content',
-				deploymentId: '5720T000000007Q',
-				buttonId: '5730T00000000AU',
+				deploymentId: '5721e0000008Ogg',
+				buttonId: '5731e0000008Oc7',
 				baseLiveAgentURL: 'https://d.la2-c1cs-hnd.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Sales_Chat_Agents',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I1e00000000RREAY_17e21ded114',
 				isOfflineSupportEnabled: false
 			}
 		);
@@ -122,18 +122,13 @@
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
-		s.setAttribute('src', 'https://proteustechnologies--cwerxdev.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.setAttribute('src', 'https://proteustechnologies--cwerxuat.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 		s.onload = function() {
 			initESW(null);
 		};
 		document.body.appendChild(s);
 	} else {
-        
 		initESW('https://service.force.com');
-        /* var utmSource = '{!$CurrentPage.parameters.utm_source}';
-        console.log('utmSource', utmSource); */
-
-        
 	}
 </script>
 
